chore!: drop ELASTIC_APM_KUBERNETES_* envvars, bump min to node v14.5.0
This starts an "Upgrade to 4.x" guide.

Bumping the min Node.js to 14.5.0 means we will be able to rely on
AsyncLocalStorage support.

Closes: https://github.com/elastic/apm-agent-nodejs/issues/2661
Refs: https://github.com/elastic/apm-agent-nodejs/issues/3529

--- a/CHANGELOG4.asciidoc
+++ b/CHANGELOG4.asciidoc
@@ -10,6 +10,11 @@
   Users of earlier Node.js versions can use elastic-apm-node v3.x, which
   supports back to Node.js v8.6.
 
+* Remove long deprecated support for the `ELASTIC_APM_`-prefixed environment
+  variables for the <<kubernetes-node-name,Kubernetes config options>>. For
+  example, one must use `KUBERNETES_POD_NAME` and not
+  `ELASTIC_APM_KUBERNETES_POD_NAME`.
+
 [float]
 ===== Features
 
