--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -44,7 +44,7 @@ Notes:
 ===== Bug fixes
 
 * The config option <<filter-http-headers, filterHttpHeaders>> is now *removed*.
-  ({pull}XXXX[#XXXX])
+  ({pull}3539[#3539])
 
 * Fix ESM support: the "loader.mjs" file was accidentally not included in
   the published package in v3.48.0. ({pull}3534[#3534])
