--- a/CHANGELOG4.asciidoc
+++ b/CHANGELOG4.asciidoc
@@ -6,9 +6,14 @@
 [float]
 ===== Breaking changes
 
-* Set the new minimum supported Node.js to version 14.
+* Set the new minimum supported Node.js to version 14.5.0.
   Users of earlier Node.js versions can use elastic-apm-node v3.x, which
   supports back to Node.js v8.6.
+
+* Remove long deprecated support for the `ELASTIC_APM_`-prefixed environment
+  variables for the <<kubernetes-node-name,Kubernetes config options>>. For
+  example, one must use `KUBERNETES_POD_NAME` and not
+  `ELASTIC_APM_KUBERNETES_POD_NAME`. ({issues}2661[#2661])
 
 [float]
 ===== Features
