chore!: drop "timer" option to startTransaction/startSpan (#3537)
Closes: https://github.com/elastic/apm-agent-nodejs/issues/2990

--- a/CHANGELOG4.asciidoc
+++ b/CHANGELOG4.asciidoc
@@ -10,6 +10,10 @@
   Users of earlier Node.js versions can use elastic-apm-node v3.x, which
   supports back to Node.js v8.6.
 
+* Ignore a `timer` option passed to `startTransaction()` and `startSpan()` APIs.
+  This option was never documented. It would be surprising if any user is
+  impacted by this.
+
 * Remove long deprecated support for the `ELASTIC_APM_`-prefixed environment
   variables for the <<kubernetes-node-name,Kubernetes config options>>. For
   example, one must use `KUBERNETES_POD_NAME` and not
