chore!: remove deprecated span.toString(), transaction.toString()
Closes: #2348

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -1214,9 +1214,8 @@ added to multiple events.
   of (re)implementing Lambda support ({pull}2363[#2363]). Some fixes for better
   flushing of data at the end of a Lambda invocation.
 
-* <<span-to-string,`span.toString()`>> and <<transaction-to-string,`transaction.toString()`>>
-  have been *deprecated*. The exact string output may change in v4 of the
-  agent.
+* `span.toString()` and `transaction.toString()` have been *deprecated*. The
+  exact string output may change in v4 of the agent.
 
 * Add `Span.ids` and `Transaction.ids` to TypeScript types. ({pull}2347[#2347])
 
