docs: update changelog4 and migration guide

--- a/CHANGELOG4.asciidoc
+++ b/CHANGELOG4.asciidoc
@@ -36,7 +36,7 @@
 [float]
 ===== Chores
 
-* Add a warning message when a duration config option is provided
+* Add a warning message when a duration or size config option is provided
   without units. ({issues}2121[#2121])
 
 [[release-notes-3.x]]
