--- a/docs/upgrade-to-v4.asciidoc
+++ b/docs/upgrade-to-v4.asciidoc
@@ -84,3 +84,9 @@ the default value.
 Byte size config options like `apiRequestSize` expect to have the size
 units specified in the value (e.g. `10kb`, `1gb`). If the unit is not
 in the value tha agent will warn about it and fallback to `bytes`.
+
+[[v4-warning-error-message-max-length]]
+=====
+
+Agent will warn if the deprecated config option `errorMessageMaxLength`
+is set
