--- a/docs/upgrade-to-v4.asciidoc
+++ b/docs/upgrade-to-v4.asciidoc
@@ -36,10 +36,12 @@ option <<sanitize-field-names, `sanitizeFieldNames`>>.
 
 ===== `useElasticTraceparentHeader`
 
-The default value of `useElasticTraceparentHeader` config option has changed
-to `false` since the standard `traceparent` header is added in outgoing
-HTTP requests. If you want the agent to continue sending `elastic-apm-traceparent`
-HTTP header you can set to `true` via env var or start options.
+The default value of the <<use-elastic-traceparent-header>> config option has changed
+to `false`. This means that the vendor-specific `elastic-apm-traceparent` header will no
+longer by added to outgoing HTTP requests. The `traceparent` header (from the 
+https://w3c.github.io/trace-context/[W3C trace-context standard]) is added by the
+APM agent. If you want the agent to continue sending `elastic-apm-traceparent`
+HTTP header you can set it to `true` via env var or start options.
 
 [[v4-api-changes]]
 ==== API changes
