--- a/docs/upgrade-to-v4.asciidoc
+++ b/docs/upgrade-to-v4.asciidoc
@@ -88,5 +88,5 @@ provided.
 =====
 
 Byte size config options like `apiRequestSize` expect to have the size
-units specified in the value (e.g. `10kb`, `1gb`). If the unit is not
-in the value tha agent will warn about it and fallback to `bytes`.
+units specified in the value (e.g. `"10kb"`, `"1gb"`). If the unit is not
+in the value, the agent will warn about it and fallback to bytes (`b`).
